@@ -87,7 +87,7 @@
 
 ; Concatenate all the arguments and make a string.  Symbols are
 ; converted to strings.
-(define (concat . sequences)
+(define (string/symbol-append . sequences)
   (define (sequence->string o) (if (symbol? o) (symbol->string o) o))
   (apply string-append (map sequence->string sequences)))
 
